<resources>
    <string name="app_name">CineGrand</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register_now">REGISTER NOW</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="enter_e_mail">Enter e-mail:</string>
    <string name="enter_password">Enter password:</string>
    <string name="enter_e_mail_here">enter e-mail here</string>
    <string name="enter_password_here">enter password here</string>
    <string name="send">SEND</string>
    <string name="movies">Movies</string>
    <string name="contacts">Contacts</string>
    <string name="click_to_choose_other_cinema">Click to choose other cinema</string>
    <string name="reservation">Reservation</string>
    <string name="contacts_of_the_cinema">Contacts of the cinema</string>
    <string name="program">Program</string>
    <string name="program_for_this_movie">Program for this movie</string>

    <string-array name="movies_names">
        <item>IT</item>
        <item>XII “А“</item>
        <item>Despicable Me 3</item>
        <item>Hitmans Bodyguard</item>
        <item>The Nut Job 2</item>
        <item>Logan Lucky</item>
    </string-array>

    <string-array name="genre_of_movies">
        <item>Drama | Horror</item>
        <item>Comedy | Drama</item>
        <item>Action | Comedy | Animation | Adventure</item>
        <item>Action | Comedy</item>
        <item>Comedy | Animation | Adventure</item>
        <item>Comedy | Drama | Crime</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>