<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context="com.example.ittalents.cinegrand.activities.RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/cine_grand_logo_small" />

    <TextView
        android:id="@+id/enter_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:fontFamily="cursive"
        android:text="@string/enter_e_mail"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/entered_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/enter_e_mail_here"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_light"
        android:textColorHint="?android:attr/textColorHighlight"
        android:textSize="30sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/enter_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:fontFamily="cursive"
        android:text="@string/enter_password"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="36sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/entered_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/enter_password_here"
        android:textColorHint="?android:attr/textColorHighlight"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="30sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/confirm_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:fontFamily="cursive"
        android:text="@string/confirm_password"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="36sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/confirmed_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:ems="10"
        android:fontFamily="cursive"
        android:hint="@string/enter_password_here"
        android:textColorHint="?android:attr/textColorHighlight"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="30sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:fontFamily="cursive"
        android:text="REGISTER NOW"
        android:textSize="30sp"
        android:textStyle="bold" />
</LinearLayout>
